Fix poll event button text vertical alignment bug.

--- a/stylesheetsv3/jquery.poi.css
+++ b/stylesheetsv3/jquery.poi.css
@@ -309,6 +309,7 @@
 }
 
 #poi-layer #poi-btn-holder .poi-yellow-button, #poi-layer #poi-btn-holder .poi-red-button, #poi-layer #poi-btn-holder .poi-blue-button, #poi-layer #poi-btn-holder .poi-green-button {
+  vertical-align: text-bottom;
   padding: 0.1em 0.55em 0 0.55em;
   height: 100%;
   -webkit-box-sizing: border-box;
